--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@ionic/react": "^7.8.2",
     "framer-motion": "^11.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
