--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-router-scroll-memory": "^2.0.7",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
